# alpha_auv

./: .buildinfo  .gitignore  .gitmodules  CITATION.cff  README.md  genindex.html  index.html  manage_sources.sh  objects.inv  search.html  searchindex.js
alpha_auv/: CMakeLists.txt  package.xml
alpha_bringup/: CMakeLists.txt  package.xml
alpha_bringup/launch/: bringup_controller.launch  bringup_helm.launch  bringup_simulation.launch  bringup_simulation_multi_agent.launch  bringup_vehicle.launch
alpha_bringup/launch/include/: cam.launch.xml  control.launch.xml  description.launch.xml  driver.launch.xml  dvl.launch.xml  gps.launch.xml  imu.launch.xml  imu_filter.launch.xml  localization.launch.xml  localization_sim.launch.xml  rf_teleop.launch.xml  scanning_sonar.launch.xml  simulator.launch.xml
alpha_config/: CMakeLists.txt  package.xml
alpha_config/config/: control.yaml  control_v1-1.yaml  control_v1.yaml  driver.yaml  driver_v1-1.yaml  driver_v1.yaml  dvl_a50.yaml  navsat_transform.yaml  ping360.yaml  uvc_cam.yaml  xsens_mti_node.yaml
alpha_config/mission/config/: helm.xml  helm.yaml
alpha_config/mission/param/: bhv00.yaml  bhv01.yaml  bhv02.yaml  bhv03.yaml  bhv04.yaml  depth_tracking.yaml  gps_wpt.yaml  hold_pos.yaml  motion_evaluation.yaml  path_global.yaml  path_local.yaml  periodic_surfacing.yaml  timer.yaml
alpha_control/: CMakeLists.txt  package.xml
alpha_control/cfg/: dynamic_reconfigure_pid.cfg
alpha_control/config/: allocation.yaml  allocation_auto.yaml  allocation_manual.yaml  control.yaml  mappings.yaml  modes.yaml  pid.yaml  thrusters.yaml
alpha_control/launch/: alpha_control.launch  load_params.launch
alpha_control/msg/: ControlMode.msg  ControlModes.msg  ControlState.msg  PIDgains.msg
alpha_control/src/: alpha_control_ros_node.cpp
alpha_control/src/alpha_control/: alpha_control.cpp  alpha_control.h  alpha_control_ros.cpp  alpha_control_ros.h  dictionary.h  exception.hpp  mimo_pid.cpp  mimo_pid.h  polynomial_solver.cpp  polynomial_solver.h  thruster_ros.cpp  thruster_ros.h
alpha_control/srv/: GetControlModes.srv  SetControlPoint.srv
alpha_description/: CMakeLists.txt  package.xml
alpha_description/launch/: description.launch  tf.launch
alpha_description/rviz/: config.rviz
alpha_description/urdf/: base.urdf.xacro  base_v1-0.urdf.xacro  base_v1-1.urdf.xacro  base_v1.urdf.xacro
alpha_driver/src/alpha_common/: CMakeLists.txt
alpha_driver/src/alpha_driver/: AlphaDriver.cpp  AlphaDriver.h  AlphaDriverRos.cpp  AlphaDriverRos.h  AlphaRos.cpp  AlphaRos.h  CMakeLists.txt  nmea.h  package.xml
alpha_driver/src/alpha_mcu/: .gitignore  CMakeLists.txt  README.md
alpha_driver/src/nmea_parser/: CMakeLists.txt
alpha_localization/: CMakeLists.txt  package.xml
alpha_localization/config/: ekf.yaml  global_ekf.yaml  navigator.yaml  navsat.yaml  robot_localization_global.yaml  robot_localization_global_sim.yaml  robot_localization_local.yaml  robot_localization_local_sim.yaml
alpha_localization/launch/: global_localization.launch  global_positioning.launch  localization.launch  robot_localization_global.launch  robot_localization_global_sim.launch  robot_localization_local.launch  robot_localization_local_sim.launch  test.launch
alpha_localization/src/: depth_filter_node.cpp  depth_filter_node.h  imu_ned_enu.cpp  imu_ned_enu.hpp  pressure_to_depth_node.cpp  pressure_to_depth_node.h
alpha_maneuverability_test/: CMakeLists.txt  package.xml
alpha_maneuverability_test/config/: test_1.yaml
alpha_maneuverability_test/src/alpha_maneuverability_test/: __init__.py  recorder.py  sequencer.py
alpha_msgs/: CMakeLists.txt  package.xml
alpha_msgs/msg/: NMEA.msg  Power.msg  Pressure.msg  ThrustSignal.msg
alpha_rf_teleop/: CMakeLists.txt  package.xml
alpha_rf_teleop/launch/: rf_teleop_remote.launch  rf_teleop_vehicle.launch
alpha_rf_teleop/src/: alpha_rf_teleop_node.cpp  alpha_rf_teleop_remote.cpp
alpha_rf_teleop/src/alpha_rf_teleop/: alpha_rf_teleop.cpp  alpha_rf_teleop.h  alpha_rf_teleop_remote.cpp  alpha_rf_teleop_remote.h  nmea.cpp  nmea.h  rf_comms.cpp  rf_comms.h
alpha_sensor_sim/: CMakeLists.txt  package.xml
alpha_sensor_sim/config/: imu.yaml
alpha_sensor_sim/config/dvl_profiles/: waterlink_a50.yaml
alpha_sensor_sim/config/imu_profiles/: sample.yaml  xsens_mti630.yaml
alpha_sensor_sim/launch/: simulated_dvl.launch  simulated_imu.launch  simulated_sensors.launch
alpha_sensor_sim/msg/: Transducer.msg
alpha_sensor_sim/src/: dvl_sim_node.cpp  imu_sim_node.cpp
alpha_sensor_sim/src/dvl_sim/: dvl_sim.cpp  dvl_sim.h
alpha_sensor_sim/src/imu_sim/: imu_sim.cpp  imu_sim.h  imu_sim.hxx
alpha_simulator/: .gitignore  CMakeLists.txt  package.xml
alpha_simulator/config/: sim_auv_nav_sensors.yaml  sim_internal_sensors.yaml
alpha_simulator/launch/: alpha_simulator.launch
alpha_simulator/src/alpha_simulator/: imu_sim.hxx  simulator.cpp  simulator.h  state.cpp  state.h  state.hxx  utilities.hxx  xsens_sim.hpp
alpha_stonefish/: CMakeLists.txt  package.xml
alpha_stonefish/description/: alpha.scn  alpha.scn.xacro  alpha_v1-1.scn.xacro  alpha_v1-2.scn.xacro  looks.scn.xacro  materials.scn.xacro
alpha_stonefish/launch/: alpha.launch  alpha_simulation.launch  alpha_tank_world.launch
alpha_stonefish/scenarios/: alpha.scn  looks.scn  materials.scn  ocean.scn  ocean.scn.xacro  ocean_multi_agent.scn.xacro  tank.scn  tank.scn.xacro
alpha_teleop/: CMakeLists.txt  package.xml
alpha_teleop/config/: config.yaml  controlled_logitech_f710.yaml  controlled_xbox_one.yaml  controls_demo.yaml  joy_teleop.yaml  logitech_f710.yaml  logitech_fx10_to_teleoperation.yaml  mcu_teleop.yaml  teleoperation.yaml  xbox_one.yaml
alpha_teleop/launch/: control_demo.launch  controlled_teleop.launch  joy_and_teleop.launch  keyboard_teleop.launch  only_teleop.launch  simple_teleop.launch  teleop.launch
alpha_teleop/src/: README.txt  keyboard_teleop_node.cpp
alpha_teleop/src/keyboard_teleop/: keyboard_teleop.cpp  (+2 more)
alpha_viz/: CMakeLists.txt  package.xml
alpha_viz/config/: config.rviz
legacy/alpha_rf_teleop/: CMakeLists.txt  package.xml
(+160 files in other folders)
