<?xml version="1.0"?>
<package format="2">
  <name>alpha_bringup</name>
  <version>0.0.0</version>
  <description>The alpha_bringup package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>alpha_description</depend>
  <depend>alpha_driver</depend>
  <depend>alpha_teleop</depend>
  <depend>waterlinked_dvl</depend>
  <depend>image_transport_plugins</depend>
  <depend>imu_tools</depend>

  <export>

  </export>
</package>
