<?xml version="1.0"?>
<package format="2">
  <name>alpha_config</name>
  <version>0.0.0</version>
  <description>The alpha_config package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>
  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
