<?xml version="1.0"?>
<package format="2">
  <name>alpha_control</name>
  <version>0.0.0</version>
  <description>The alpha_control package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>
  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/alpha_control</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>libgsl</depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
