<?xml version="1.0"?>
<package format="2">
  <name>alpha_description</name>
  <version>0.0.0</version>
  <description>The alpha_description package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>


  <export>

  </export>

</package>
