<?xml version="1.0"?>
<package format="2">
  <name>alpha_maneuverability_test</name>
  <version>0.0.0</version>
  <description>The alpha_maneuverability_test package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>alpha_driver</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
