<?xml version="1.0"?>
<package format="2">
  <name>alpha_msgs</name>
  <version>0.0.0</version>
  <description>The alpha_msgs package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

  <export>

  </export>

</package>
