<?xml version="1.0"?>
<package format="2">
  <name>alpha_rf_teleop</name>
  <version>0.0.0</version>
  <description>The alpha_rf_teleop package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>seal_msgs</depend>
  <depend>geometry_msgs</depend>


  <export>

  </export>
</package>
