<?xml version="1.0"?>
<package format="2">
  <name>alpha_sensor_sim</name>
  <version>0.0.0</version>
  <description>The alpha_sensor_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hydrodev@todo.todo">hydrodev</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>