<?xml version="1.0"?>
<package format="2">
  <name>alpha_simulator</name>
  <version>0.0.0</version>
  <description>The alpha_simulator package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>alpha_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>waterlinked_dvl</depend>
  <depend>cola2_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>cola2_sim</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
