<?xml version="1.0"?>
<package format="2">
  <name>alpha_stonefish</name>
  <version>0.0.0</version>
  <description>The alpha_stonefish package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>
  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="linzhao@uri.edu">Lin Zhao</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>stonefish_mvp</depend>

</package>
