<?xml version="1.0"?>
<package format="2">
  <name>alpha_viz</name>
  <version>0.0.0</version>
  <description>The alpha_viz package</description>

  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>GLPv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>

</package>
